pxc/tests/test_01_px/constmet3.px

namespace constmet3;
import io;

struct foo {
	int x;
	function int m(int y) const {
		int oldx = x;
		x = y; // error
		return oldx;
	}
}

ref{foo} v = foo(10);
io::println(v->m(20));

